UI improvements, virtual desktop stuff, bug fixessssssss

--- a/src/css/apps/components/shell/actioncenter.css
+++ b/src/css/apps/components/shell/actioncenter.css
@@ -41,4 +41,5 @@ div.shell div.actioncenter div.top {
 div.shell div.actioncenter div.top > div {
   border-radius: 10px;
   height: 110px;
+  box-shadow: 0 2px 5px 2px #0002;
 }
