--- a/src/css/apps/components/shell/actioncenter/notifications.css
+++ b/src/css/apps/components/shell/actioncenter/notifications.css
@@ -4,6 +4,7 @@
   border-radius: 10px;
   flex-grow: 1;
   overflow: hidden;
+  box-shadow: 0 2px 5px 2px #0002;
 }
 
 #arcShell div.shell div.notifications > div.content > p.none {
