--- a/src/css/apps/components/shell/taskbar.css
+++ b/src/css/apps/components/shell/taskbar.css
@@ -12,7 +12,7 @@ div.shell div.taskbar {
   background-color: var(--glass-bg);
   border-radius: 10px;
   border: var(--border);
-
+  box-shadow: 0 2px 5px 2px #0004;
   backdrop-filter: blur(var(--blur));
 }
 
@@ -30,6 +30,7 @@ div.shell.docked div.taskbar {
   border-radius: 0;
   border: none;
   border-top: var(--border);
+  box-shadow: none;
 }
 
 #arcShell div.shell div.taskbar > button {
