--- a/src/css/apps/user/settings/themesheader.css
+++ b/src/css/apps/user/settings/themesheader.css
@@ -14,6 +14,7 @@
   background-position: center;
   background-size: cover;
   padding: 3px;
+  box-shadow: 0 2px 5px 2px #0004;
 }
 
 #systemSettings div.themes-header div.screen.desktop {
