--- a/src/css/apps/core/loginapp.css
+++ b/src/css/apps/core/loginapp.css
@@ -78,6 +78,7 @@ div.window#loginApp div.container div.field:last-child {
 
 div.window#loginApp div.container div.field div.lucide {
   width: 36px;
+  min-width: 36px;
   height: 35px;
   border-right: #fff2 1px solid;
   font-size: 16px;
@@ -93,6 +94,7 @@ div.window#loginApp div.container div.field input {
   flex-grow: 1;
   padding: 0 10px;
   height: 35px;
+  max-width: calc(100% - 36px);
 }
 
 div.window#loginApp div.login-form {
