More workspace UI stuff

--- a/src/css/apps/components/shell/workspaces.css
+++ b/src/css/apps/components/shell/workspaces.css
@@ -14,7 +14,7 @@
   overflow: hidden;
   display: flex;
   align-items: center;
-  box-shadow: 0 2px 5px 2px #0004;
+  box-shadow: var(--secondary-box-shadow);
 }
 
 #arcShell div.virtual-desktops:not(.visible) {
@@ -111,7 +111,7 @@
   width: 80px;
   height: 80px;
   background-color: var(--button-glass-bg);
-  /* box-shadow: 0 2px 5px 2px #0004; */
+  /* box-shadow: var(--secondary-box-shadow); */
   font-size: 24px;
 }
 
