--- a/src/css/apps/user/settings.css
+++ b/src/css/apps/user/settings.css
@@ -12,10 +12,12 @@
 @import url("./settings/overlay/changepassword.css");
 @import url("./settings/overlay/urlloginbackground.css");
 @import url("./settings/overlay/urlwallpaper.css");
+@import url("./settings/overlay/urlprofilepicture.css");
 @import url("./settings/slide.css");
 @import url("./settings/slide/weatherlocation.css");
 @import url("./settings/slide/userstyle.css");
 @import url("./settings/slide/loginactivity.css");
+@import url("./settings/slide/pickpfpbuiltin.css");
 
 #systemSettings > div.body {
   padding: 0;
