--- a/src/css/virtualdesktop.css
+++ b/src/css/virtualdesktop.css
@@ -8,7 +8,7 @@ div.virtual-desktop-container {
   pointer-events: initial !important;
 }
 
-div.virtual-desktop-container div.inner {
+div.virtual-desktop-container > div.inner {
   width: fit-content;
   height: 100vh;
   position: absolute;
