--- a/src/css/apps/components/shell.css
+++ b/src/css/apps/components/shell.css
@@ -2,6 +2,7 @@
 @import url("./shell/taskbar.css");
 @import url("./shell/startmenu.css");
 @import url("./shell/workspaces.css");
+@import url("./shell/contextmenu.css");
 @import url("./shell/workspaceindicator.css");
 @import url("./shell/pushnotification.css");
 @import url("./shell/colored.css");
