--- a/src/css/apps/user/filemanager.css
+++ b/src/css/apps/user/filemanager.css
@@ -412,3 +412,28 @@
   justify-content: center;
   align-items: center;
 }
+
+#fileManager > div.body > div.splash {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 150px 0;
+  padding-bottom: 100px;
+  flex-direction: column;
+}
+
+#fileManager > div.body > div.splash img {
+  height: 96px;
+}
+
+#fileManager div.window.overlay {
+  top: 15px;
+  scale: 1 !important;
+  margin-top: -100px;
+}
+
+#fileManager div.window.overlay.visible:not(.closing) {
+  margin-top: 0;
+}
