--- a/src/css/apps/components/shell/actioncenter/notifications.css
+++ b/src/css/apps/components/shell/actioncenter/notifications.css
@@ -115,6 +115,32 @@ div.shell div.actioncenter div.notification.deleted {
   display: none;
 }
 
+div.shell div.actioncenter div.notification div.buttons {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  height: 32px;
+  margin-top: 15px;
+}
+
+div.shell div.actioncenter div.notification div.buttons button {
+  flex-grow: 1;
+  margin: 0;
+  background-color: var(--button-glass-bg);
+  height: 32px;
+}
+
+div.shell div.actioncenter div.notification div.buttons button:hover {
+  background-color: var(--button-glass-hover-bg);
+}
+div.shell div.actioncenter div.notification div.buttons button:active {
+  background-color: var(--button-glass-active-bg);
+}
+
+div.shell div.actioncenter div.notification.collapsed div.buttons {
+  display: none;
+}
+
 @keyframes notifications-show-none {
   from {
     opacity: 0;
