--- a/src/css/window/controls.css
+++ b/src/css/window/controls.css
@@ -1,8 +1,10 @@
+div.window > div.body div.titlebar.custom div.controls,
 div.window > div.titlebar div.controls {
   display: flex;
   gap: 2px;
   height: 16px;
   position: relative;
+  margin-left: auto;
 }
 
 div.window > div.body div.titlebar.custom div.controls button,
@@ -18,6 +20,30 @@ div.window > div.titlebar div.controls button {
   transition: opacity 0.2s;
 }
 
+div.window div.titlebar div.alt-menu {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding-left: 10px;
+  margin-left: 5px;
+  border-left: var(--button-glass-hover-bg) 1px solid;
+}
+
+div.window div.titlebar div.alt-menu button {
+  margin: 0;
+  padding: 0 5px;
+  height: 20px;
+  background-color: transparent;
+  color: var(--fg);
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+  min-width: unset;
+}
+
+div.window > div.titlebar div.alt-menu button:hover {
+  background-color: var(--button-glass-bg);
+}
 div.window > div.body div.titlebar.custom div.controls button:hover,
 div.window > div.titlebar div.controls button:hover {
   color: var(--accent-light);
