--- a/src/css/window/titlebar.css
+++ b/src/css/window/titlebar.css
@@ -7,8 +7,9 @@ div.window > div.titlebar,
 div.window > div.body div.titlebar.custom {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+
   align-items: center;
+  gap: 10px;
   width: 100%;
   height: 40px;
   z-index: 100;
