--- a/src/css/apps/user/hexedit.css
+++ b/src/css/apps/user/hexedit.css
@@ -62,20 +62,23 @@
   font-weight: bold;
 }
 
-#HexEdit > div.body div.hex-editor input.nul {
+#HexEdit > div.body .nul {
   opacity: 0.5;
 }
 
-#HexEdit > div.body div.hex-editor input.ascii-control {
+#HexEdit > div.body .ascii-control {
   color: var(--clr-green-fg);
+  background-color: var(--clr-green-bg);
 }
 
-#HexEdit > div.body div.hex-editor input.printable-ascii {
+#HexEdit > div.body .printable-ascii {
   color: var(--clr-blue-fg);
+  background-color: var(--clr-blue-bg);
 }
 
-#HexEdit > div.body div.hex-editor input.rest {
+#HexEdit > div.body .rest {
   color: var(--clr-orange-fg);
+  background-color: var(--clr-orange-bg);
 }
 
 #HexEdit > div.body div.decoded div {
