--- a/src/css/apps/user/hexedit.css
+++ b/src/css/apps/user/hexedit.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: start;
   font-family: "Source Code Pro";
-  overflow-y: auto;
+  /* overflow-y: auto; */
 }
 
 #HexEdit > div.body {
