--- a/src/css/apps/user/hexedit.css
+++ b/src/css/apps/user/hexedit.css
@@ -28,11 +28,16 @@
 }
 
 #HexEdit > div.body div.hex-editor div.hex-row {
-  height: 20px;
-  margin-bottom: 5px;
+  height: 25px;
+  margin-bottom: 0;
   display: flex;
   align-items: center;
-  gap: 5px;
+  margin: 0 -10px;
+  padding: 0 10px;
+}
+
+#HexEdit > div.body div.hex-editor div.hex-row:hover {
+  background-color: var(--button-glass-bg);
 }
 
 #HexEdit > div.body div.decoded div:last-child,
@@ -44,10 +49,10 @@
 #EditRow > div.body div.bytes input,
 #HexEdit > div.body div.hex-editor button {
   padding: 0;
-  background-color: var(--button-bg);
+  background-color: transparent;
   border: none;
-  width: 20px;
-  height: 20px;
+  width: 25px;
+  height: 25px;
   min-width: unset !important;
   font-family: "Source Code Pro";
   border-radius: 3px;
@@ -60,21 +65,26 @@
 }
 
 #HexEdit > div.body div.offsets button {
-  padding: 0;
   display: block;
-  width: 100%;
-  height: 20px;
-  margin-bottom: 5px;
-  border-radius: 3px;
+  width: calc(100% + 20px);
+  height: 25px;
+  margin-bottom: 0;
+  border-radius: 0;
   text-align: right;
   background-color: transparent;
   opacity: 0.5;
   transition: none;
+  margin: 0 -10px;
+  padding: 0 10px;
 }
 
 #HexEdit > div.body div.offsets button:hover {
   color: var(--accent-lighter);
   font-weight: bold;
+  opacity: 1;
+}
+#HexEdit > div.body div.offsets button.active {
+  background-color: var(--button-glass-bg);
   opacity: 1;
 }
 
@@ -111,8 +121,9 @@
 }
 
 #HexEdit > div.body div.decoded div {
-  height: 20px;
-  margin-bottom: 5px;
+  height: 25px;
+  padding: 2.5px 0;
+  margin-bottom: 0;
 }
 
 #EditRow > div.body {
@@ -128,7 +139,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 5px;
 }
 
 #EditRow > div.body div.row.primary div.offset {
@@ -143,7 +153,6 @@
 #EditRow > div.body div.bytes {
   display: flex;
   align-items: center;
-  gap: 5px;
 }
 #EditRow > div.body div.bytes input {
   background-color: transparent;
@@ -243,4 +252,10 @@
 
 #HexEdit div.status-bar div.segment.size {
   margin-left: auto;
+}
+
+#HexEdit .prominent {
+  outline: currentColor 2px solid !important;
+  outline-offset: 1px;
+  border-radius: 2px;
 }
